--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,28 +6,21 @@
     android:padding="16dp"
     android:orientation="vertical"
     tools:context=".MainActivity">
+    <EditText
+       android:id="@+id/editor"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:hint="请输入IP"
+        />
     <TextView
         android:id="@+id/text"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:text="点击按钮获取网络数据"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="获取数据【成功】"
         android:onClick="getData"
-        />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="获取数据【失败】"
-        android:onClick="getDataForFailure"
-        />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="获取数据【异常】"
-        android:onClick="getDataForError"
         />
 </LinearLayout>
